# ncemu

./: .nfs00000000c34958d9000001a7  CMakeLists.txt  cpu.c  cpu.h  crc.c  crc.h  emulator.c  emulator.h  gpu.c  gpu.h  instr.c  main.c  op.c  op.c~  ops.c  snd.c  snd.h
